--- a/index.html
+++ b/index.html
@@ -4,19 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dark/Light Mode | Nelo Code</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="img/MyLogo.png">
+    <link rel="icon" href="img/MyLogo.png" type="image/png">
 </head>
 <body>
+    <!-- Stars for dark mode -->
+    <div class="stars">
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+    </div>
+
+    <div class="planet"></div>
+    <div class="planet"></div>
+    <div class="planet"></div>
+
     <div class="btn">
         <div class="btn__indicator">
             <div class="btn__icon-container">
-                <img src="img/clear.png" alt="sun" class="btn__icon">
+                <svg class="btn__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <!-- Sun icon - shown by default -->
+                    <g class="sun-icon">
+                        <circle cx="12" cy="12" r="5" fill="#FFA500"/>
+                        <path d="M12 1v3M12 20v3M3.22 3.22l2.12 2.12M18.36 18.36l2.12 2.12M1 12h3M20 12h3M3.22 20.78l2.12-2.12M18.36 5.64l2.12-2.12" stroke="#FFA500" stroke-width="2" stroke-linecap="round"/>
+                    </g>
+                    <!-- Moon icon - hidden by default -->
+                    <g class="moon-icon" style="display: none;">
+                        <path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z" fill="#f0f0f0"/>
+                        <circle cx="18" cy="7" r="1.5" fill="#e0e0e0" opacity="0.5"/>
+                        <circle cx="15" cy="10" r="1" fill="#e0e0e0" opacity="0.3"/>
+                    </g>
+                </svg>
             </div>
         </div>
     </div>
 
-    <h2>All rights reserved || Nelo Code</h2>
+    <h2 style="margin: 50px 0 0 0;">All rights reserved || Nelo Code</h2>
     
     <script src="script.js" type="text/javascript"></script>
 </body>
