--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
     <link rel="icon" href="img/MyLogo.png" type="image/png">
 </head>
 <body>
+    <!-- Clouds for light mode -->
+    <div class="clouds">
+        <div class="cloud"></div>
+        <div class="cloud"></div>
+        <div class="cloud"></div>
+        <div class="cloud"></div>
+        <div class="cloud"></div>
+        <div class="cloud"></div>
+        <div class="cloud"></div>
+    </div>
+
     <!-- Stars for dark mode -->
     <div class="stars">
         <div class="star"></div>
@@ -33,22 +44,52 @@
         <div class="star"></div>
         <div class="star"></div>
         <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <div class="star"></div>
+        <!-- Comets/Shooting Stars -->
+        <div class="comet"></div>
+        <div class="comet"></div>
+        <div class="comet"></div>
+        <div class="comet"></div>
+        <div class="comet"></div>
+        <div class="comet"></div>
     </div>
 
-    <div class="planet"></div>
-    <div class="planet"></div>
-    <div class="planet"></div>
+    <!-- Planets for dark mode -->
+    <div class="planets">
+        <div class="planet planet-1"></div>
+        <div class="planet planet-2"></div>
+        <div class="planet planet-3"></div>
+        <div class="planet planet-4"></div>
+        <div class="planet planet-5"></div>
+    </div>
 
     <div class="btn">
         <div class="btn__indicator">
             <div class="btn__icon-container">
                 <svg class="btn__icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <!-- Sun icon - shown by default -->
                     <g class="sun-icon">
                         <circle cx="12" cy="12" r="5" fill="#FFA500"/>
                         <path d="M12 1v3M12 20v3M3.22 3.22l2.12 2.12M18.36 18.36l2.12 2.12M1 12h3M20 12h3M3.22 20.78l2.12-2.12M18.36 5.64l2.12-2.12" stroke="#FFA500" stroke-width="2" stroke-linecap="round"/>
                     </g>
-                    <!-- Moon icon - hidden by default -->
                     <g class="moon-icon" style="display: none;">
                         <path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z" fill="#f0f0f0"/>
                         <circle cx="18" cy="7" r="1.5" fill="#e0e0e0" opacity="0.5"/>
@@ -59,8 +100,8 @@
         </div>
     </div>
 
-    <h2 style="margin: 50px 0 0 0;">All rights reserved || Nelo Code</h2>
-    
+    <h2 style="margin: 50px 0 0 0;">All rights reserved 2025 || Nelo Code</h2>
+ 
     <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
